# Amply

./: .gitignore  .gitmodules  AddIconToBinary.cmake  CMakeLists.txt  LICENSE  README.md
images/: Amply.icns
include/: commandhandler.h  digitalamp.h  effect.h  utils.h
include/Effects/: gain.h
src/: commandhandler.cpp  digitalamp.cpp  main.cpp  utils.cpp
